--- a/.github/workflows/docker-to-docker-hub.yml
+++ b/.github/workflows/docker-to-docker-hub.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./ 
-          file: ./Dockerfile
+          file: ./borg-backup-docker/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ushamandya/simplewhale:latest
