--- a/.github/workflows/docker-to-docker-hub.yml
+++ b/.github/workflows/docker-to-docker-hub.yml
@@ -35,11 +35,11 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./borg-backup-docker
-          file: ./Dockerfile
+          context: ./borg-backup-docker/
+          file: ./borg-backup-docker/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ushamandya/simplewhale:latest
+          tags: sebastianrzk/borg-backup-container:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
