--- a/borg-backup-docker/Dockerfile
+++ b/borg-backup-docker/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu
+FROM python:3-slim-bullseye
 
 ENV BORG_UNKNOWN_UNENCRYPTED_REPO_ACCESS_IS_OK=yes
-RUN apt-get update && apt-get install borgbackup python3 python3-pip cron --yes
+RUN apt-get update && apt-get install borgbackup cron --yes && apt clean
 COPY requirements.txt /requirements.txt
 RUN pip3 install -r /requirements.txt
 COPY main.py /main.py
