Update to new alpine version

--- a/borg-backup-docker/Dockerfile
+++ b/borg-backup-docker/Dockerfile
@@ -2,8 +2,7 @@ FROM alpine
 
 ENV BORG_UNKNOWN_UNENCRYPTED_REPO_ACCESS_IS_OK=yes
 COPY requirements.txt /requirements.txt
-RUN apk add python3 py3-pip borgbackup bash openrc busybox-initscripts && pip3 install -r /requirements.txt
-RUN rc-update add crond
+RUN apk add python3 py3-pip borgbackup bash && pip3 install -r /requirements.txt
 COPY main.py /main.py
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
