--- a/.github/workflows/docker-to-docker-hub.yml
+++ b/.github/workflows/docker-to-docker-hub.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       -
         name: Build and push bord backup container
         id: docker_build_borg-backup-container
