--- a/.github/workflows/docker-to-docker-hub-with-ssh.yml
+++ b/.github/workflows/docker-to-docker-hub-with-ssh.yml
@@ -10,6 +10,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       -
         name: Build and push bord backup container with ssh
         id: docker_build_borg-backup-container
